force-app/main/default/objects/Opportunity/fields/Budget_Override__c.field-meta.xml
<CustomField>
    <fullName>Budget_Override__c</fullName>
    <description>For cases where a grant should not be allocated to its focus area&apos;s budget, this provides the opportunity to override that default focus area budget.</description>
    <inlineHelpText>For cases where a grant should not be allocated to its focus area&apos;s budget, this provides the opportunity to override that default focus area budget.</inlineHelpText>
    <label>Budget Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget_Override</valueSetName>
    </valueSet>
</CustomField>