force-app/main/default/objects/Opportunity/fields/Budget_Override_or_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Budget_Override_or_Focus_Area__c</fullName>
    <description>For budget dashboards, return the Budget Override name if there is one, otherwise return the Focus Area name. Filled by formula, not editable by humans.</description>
    <formula>IF(TEXT(Budget_Override__c) != null, TEXT(Budget_Override__c),TEXT(Focus_Area__c))</formula>
    <inlineHelpText>For budget dashboards, return the Budget Override name if there is one, otherwise return the Focus Area name. Filled by formula, not editable by humans.</inlineHelpText>
    <label>Budget Override or Focus Area</label>
    <type>Text</type>
</CustomField>