force-app/main/default/objects/Opportunity/fields/Conditional_Approval__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Approval__c</fullName>
    <label>Conditional Approval</label>
    <type>Date</type>
</CustomField>