force-app/main/default/objects/Opportunity/fields/Grant_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Close_Date__c</fullName>
    <description>The date the grant ends or &quot;closes&quot;.</description>
    <inlineHelpText>Leave blank unless you selected &quot;Custom&quot; for the Grant Close Schedule field. Otherwise enter the close date specified by the Investigator.</inlineHelpText>
    <label>Grant Close Date</label>
    <type>Date</type>
</CustomField>