force-app/main/default/objects/Opportunity/fields/Internal_Write_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Write_Up_Link__c</fullName>
    <description>The link to the internal write-up describing the grant.</description>
    <inlineHelpText>The link to the internal write-up describing the grant.</inlineHelpText>
    <label>Internal Write-Up Link</label>
    <type>Url</type>
</CustomField>